mudando um pouco

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <h1>Registro de dados</h1>
         <h2>Registro</h2>
         <form id="form-registro">
-            <input type="text" id="nome-registro" required placeholder="Nome completo" />
-            <input type="text" required placeholder="login" />
-            <input type="password" required placeholder="password" />
-            <input type="email" required placeholder="E-mail" />
-            <input type="tel" required placeholder="Telefone" />
-            <input type="date" required placeholder="Data de nascimento">
+            <input type="text" id="login" required placeholder="login" />
+            <input type="password" id="password" required placeholder="password" />
+            <input type="email" id="email" required placeholder="E-mail" />
+            <input type="tel" id="telefone" required placeholder="Telefone" />
+            <input type="date" id="data-nascimento" required placeholder="Data de nascimento">            
             <button>cadastrar</button>
         </form>
     </div>
