--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h1>Registro de dados</h1>
         <h2>Registro</h2>
         <form id="form-registro">
-            <input type="text" id="login" required placeholder="login" />
+            <input type="text" id="nome" required placeholder="nome" />
             <input type="password" id="password" required placeholder="password" />
             <input type="email" id="email" required placeholder="E-mail" />
             <input type="tel" id="telefone" required placeholder="Telefone" />
             <input type="date" id="data-nascimento" required placeholder="Data de nascimento">            
-            <button>cadastrar</button>
+            <button id="bt-enviar" type="submit">cadastrar</button>
         </form>
     </div>
     <script src="./main.js"></script>
