--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <h2>Registro</h2>
         <form id="form-registro">
             <input type="text" id="nome" required placeholder="nome" />
+            <p class="error-message">
+                O nome precisa ser completo
+            </p>
             <input type="password" id="password" required placeholder="password" />
             <input type="email" id="email" required placeholder="E-mail" />
             <input type="tel" id="telefone" required placeholder="Telefone" />
-            <input type="date" id="data-nascimento" required placeholder="Data de nascimento">            
+            <input type="date" id="datanascimento" required placeholder="Data de nascimento">            
             <button id="bt-enviar" type="submit">cadastrar</button>
         </form>
+        <p class="success-message">
+            O Registro efetuado com sucesso: <b>Jean Alves</b>
+        </p>
     </div>
     <script src="./main.js"></script>
 </body>
