--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="form-registro">
             <input type="text" id="nome" required placeholder="nome" />
             <p class="error-message">
-                O nome precisa ser completo
+                O nome precisa estar completo
             </p>
             <input type="password" id="password" required placeholder="password" />
             <input type="email" id="email" required placeholder="E-mail" />
